# Projects

./: README.md
C and C++/RaceGame/: CMakeLists.txt  README.txt  main.cpp  race.cpp  race.h
C and C++/SimpleConsoleProgram/Fibonacci/: CMakeLists.txt  fibo.cpp  fibo.h  main.cpp
C and C++/SimpleConsoleProgram/Interest/: interest.c
C and C++/SimpleConsoleProgram/Search/: CMakeLists.txt  main.cpp  search.cpp  search.h
C and C++/SimpleConsoleProgram/Sort/: CMakeLists.txt  main.cpp  sort.cpp  sort.h
C and C++/SimpleConsoleProgram/Struct/: CMakeLists.txt  main.cpp  struct.cpp  struct.h
HTML and CSS/: Official_Quokka_Webpage.html
HTML and CSS/Quokka/Pages/: Beach.html  Food.html  StyleSheet.css  Where.html
Java/SimpleConsolePrograms/: ASCII.java  Calculator.java  Clock.java  ConsonantalAlphabet.java  Countdown.java  DotPlot.java  Editor.java  EvenOdd.java  Franconian.java  ISBN.java  LeapYear.java  Money.java  MonthName.java  Palindrome.java  Parentheses.java  Pilot.java  PlagiatTester.java  PlagiatTester2.java  StopWords.java  Time.java  WildBienen.java  YearlyRate.java
Java/SimpleGames/: Adventure.java  Breakout.java  Pong.java  SimpleCraps.java
Java/SimpleGraphicPrograms/: ArcheryWithFor.java  CarSymbol.java  Heart.java  Lightning.java  Piano.java  Skyscraper.java  Smiley.java  Spaceship.java  TrafficLight.java  Tree.java  YinYang.java
